another ghost window
@lyude ran into another ghost window (like with gnome-shell!395 (merged)).
This time the traceback was this:
Apr 29 13:11:31 malachite gnome-shell[7434]: clutter_actor_set_reactive: assertion 'CLUTTER_IS_ACTOR (actor)' failed
Apr 29 13:11:31 malachite gnome-shell[7434]: JS ERROR: TypeError: windowActor is null
_removeWindowEffect@resource:///org/gnome/shell/ui/closeDialog.js:90:13
wrapper@resource:///org/gnome/gjs/modules/_legacy.js:82:22
vfunc_hide@resource:///org/gnome/shell/ui/closeDialog.js:184:9
wrapper@resource:///org/gnome/gjs/modules/_legacy.js:82:22
She was doing a kernel compile in the background when the problem happened and the system was pretty bogged down.
My guess is the window got killed around the same time the "not responding" dialog was about to come up.
Edited by Ray Strode